--- a/HTML/_1_July_2025/_1_first.html
+++ b/HTML/_1_July_2025/_1_first.html
@@ -3,7 +3,7 @@ HTML: What is HTML?
 Date: 1 July 2025
 Milestone: 1
 Module: 1
-Video: 1-1 [HTML]: Explore VSCode and what is HTML
+1-1 [HTML]: Explore VSCode and what is HTML
 
 HTML: HyperText Markup Language
 Hyper কথা দ্বারা যা বুঝায়: Text কে লিঙ্ক করা যায়, যে লিঙ্কে ক্লিক করলে অন্য ওয়েব পেইজে নিয়ে যায়। 
