HTML: What is HTML?

--- a/HTML/_1_July_2025/_1_first.html
+++ b/HTML/_1_July_2025/_1_first.html
@@ -10,7 +10,7 @@ Hyper কথা দ্বারা যা বুঝায়: Text কে লিঙ
 Web browser refresh: ctrl + R
 -->
 
-amar sonar bangla<br>
-ami tomay valobashi<br>
-cirodin tomar akash tomar batash, amar prane,<br>
+amar sonar bangla
+ami tomay valobashi
+cirodin tomar akash tomar batash, amar prane,
 Oma amar prane bajay dotara
