HTML: Revision 1 and 2

--- a/HTML/_1_July_2025/rivision_1_2.html
+++ b/HTML/_1_July_2025/rivision_1_2.html
@@ -5,6 +5,7 @@ Milestone: 1
 Module: 1
 1-3 HTML Text: Headings, small, and inline vs block (div, span)
 
+Learnings:
 Vs code extension:
 1. live server: 
 2. Code Spell Checker: 
