HTML: bold, italic, strong, emphasize tags

--- a/HTML/_1_July_2025/_2_second.html
+++ b/HTML/_1_July_2025/_2_second.html
@@ -5,7 +5,9 @@ Milestone: 1
 Module: 1
 1-2 HTML Text: Creating paragraphs, Text formatting (b,i, strong, em)
 
-<p></p> paragraph tag:
+
+Learnings: 
+<p></p> paragraph tag: to create a paragraph.
 
 <b></b> bold tag: used to bold a group of text.
 <strong></strong> tag: same as <b></b> tag. It's a semantic tag.
