HTML: What is HTML?

--- a/HTML/_1_July_2025/_1_first.html
+++ b/HTML/_1_July_2025/_1_first.html
@@ -5,6 +5,7 @@ Milestone: 1
 Module: 1
 1-1 [HTML]: Explore VSCode and what is HTML
 
+Learnings: 
 HTML: HyperText Markup Language
 Hyper কথা দ্বারা যা বুঝায়: Text কে লিঙ্ক করা যায়, যে লিঙ্কে ক্লিক করলে অন্য ওয়েব পেইজে নিয়ে যায়। 
 Web browser refresh: ctrl + R
