--- a/HTML/_1_July_2025/_3_heading.html
+++ b/HTML/_1_July_2025/_3_heading.html
@@ -7,7 +7,7 @@ Module: 1
 
 Learnings: 
 heading -> h1 to h6 
-inline tag -> keep the change in same line. strong, em, i, small, span
+inline tag / plain -> keep the change in same line. strong, em, i, small, span
 block tag -> after changes it create a next line. Ex. p, h1,
 -->
 
