--- a/HTML/_1_July_2025/_5_link.html
+++ b/HTML/_1_July_2025/_5_link.html
@@ -9,7 +9,8 @@ Learnings:
 href attribute: HyperText Reference
 Internal Link:
 External Link:
-<anchor></anchor> tag: 
+<a></a> anchor tag: used to create a Hyper Link
+target: used to specify where the link will be opened. Ex. target="_blank" will open the page in a new tab
 
 -->
 
