CSS: Explore Basic CSS

--- a/HTML/_2_July_2025/_2_basic_css.html
+++ b/HTML/_2_July_2025/_2_basic_css.html
@@ -14,7 +14,7 @@ color express type:
 4. by hue-saturation: Ex, color : hsl(0, 53%, 58%);
 4. by rgba value: Ex, color : rgb(255, 0, 0, 0.8);
 
-CSS units:
+CSS Measuring units:
 1. Absolute Lengths: Absolute length is fixed.
     cm: centimeters
     mm: millimeters
