Module 4: Simple navbar and internal navigation among files

--- a/Milestone_1/Module_4/2_blogs.html
+++ b/Milestone_1/Module_4/2_blogs.html
@@ -17,14 +17,17 @@ Learnings:
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Blogs</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Contact</a></li>
-        </ul>
-      </nav>
+        <nav>
+            <ul>
+                <li><a href="/Milestone_1/Module_4/2_blogs.html">Blogs</a></li>
+                <!-- li*4>a -->
+                 <li><a href="/Milestone_1/Module_4/6_center.html">Center</a></li>
+                 <li><a href="/Milestone_1/Module_4/5_css_flexBox.html">Flex</a></li>
+                 <li><a href="/Milestone_1/Module_4/4_table.html">Table</a></li>
+                 <li><a href="/Milestone_1/Module_4/3_form.html">Form</a></li>
+                 <li><a href="/Milestone_1/Module_4/7_nav.html">Nav</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
