--- a/Milestone_1/Module_4/3_form.html
+++ b/Milestone_1/Module_4/3_form.html
@@ -14,6 +14,7 @@ Learnings:
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pitha Ghor</title>
+    <link rel="stylesheet" href="/Milestone_1/Module_4/styles/nav.css">
     <style>
         form .basic-info label {
             display: block;
@@ -23,7 +24,17 @@ Learnings:
   </head>
   <body>
     <header>
-
+        <nav>
+            <ul>
+                <li><a href="/Milestone_1/Module_4/2_blogs.html">Blogs</a></li>
+                <!-- li*4>a -->
+                 <li><a href="/Milestone_1/Module_4/6_center.html">Center</a></li>
+                 <li><a href="/Milestone_1/Module_4/5_css_flexBox.html">Flex</a></li>
+                 <li><a href="/Milestone_1/Module_4/4_table.html">Table</a></li>
+                 <li><a href="/Milestone_1/Module_4/3_form.html">Form</a></li>
+                 <li><a href="/Milestone_1/Module_4/7_nav.html">Nav</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
